--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           background-position: center;
         "
       >
-        <h1 class="featured-title">Unlimited movies, TV shows and more.</h1>
-        <p class="featured-desc">Watch anywhere. Cancel anytime.</p>
+        <h1 class="featured-title">Get Your Household Code</h1>
+        <p class="featured-desc">Enter your account's email</p>
 
         <!-- Email Form -->
         <form id="emailForm" class="email-form">
@@ -55,7 +55,7 @@
             type="email"
             id="emailInput"
             class="email-input"
-            placeholder="Enter your email"
+            placeholder="Netflix account email"
             required
           />
           <button type="submit" class="featured-button">
